- moved the inefficient texture categorization for texture browser into background loading thread. you should be able to actually move around and do stuff while loading a wad with a lot of textures sooner now. the textures will take the same total time to actually load in as before though. ideally i'd replace this code completely, as threading it is just sort of moving the problem.
- some minor stuff to allow some gzdb plugin cross-compatibility (Sound Propagation, sound environ, automap). this is unstable, use at your own risk. some gzdb features are "faked" to the plugins to trick them into running
- not really a change, but just in case it's unclear, the GZDoom Editing plugin that can render slopes and 3d floors is included. may need setup in preferences
- added autogenerated "flats" & "textures" categories if you load in a config that can mix flats/textures
- missing textures are drawn with full brightness in 3d visual mode
- scripts editor opens SCRIPTS tab by default instead of DIALOGUE
- linedef edit window resizeable, shifted around a little so UDMF stuff doesn't require scrolling on default size
- sector/line/thing action special selection dropdown is larger. less scrolling
- action special selection window resizeable, is larger by default. less scrolling
- thing edit window resizeable, taller by default (equal to default linedef edit window height). less scrolling
- sector edit window resizeable
- vertex edit window resizeable, does not show up in taskbar (matching behavior of other windows)
- statusbar 18 pix shorter (less wasted space)
- map format selection dropdown taller, to not require scrolling
- error log does not show up in taskbar (matching behavior of other windows)
- on the error log window, the "close" button is highlighted by default, letting you close it by hitting enter
- texture browser opens faster, and draws faster for smoother scrolling. mild tradeoff: currently selected item is shown with a solid background, instead of a gradient