@@ -453,6 +453,16 @@ testmap
 	allowscroll = false;
 }
 
+testmaphere
+{
+	title = "Test Map At Mouse Cursor";
+	category = "tools";
+	description = "Starts the game and loads this map for playing.";
+	allowkeys = true;
+	allowmouse = false;
+	allowscroll = false;
+}
+
 thingsfilterssetup
 {
 	title = "Configure Things Filters";
