@@ -7,6 +7,7 @@ doom builder 2 patch, "Doombuilder X" <-tentative name (?)
 - a basic EE-UDMF config partially based on the GZDB-BF one (thanks Altazimuth, Maxed, Printz, Zzyzx). on mouseover highlights portals like line/sector tags, and includes the new sector scroller properties.
 - hold alt while drawing geometry for "pen mode" (try it and you'll see)
 - moved the inefficient texture categorization for texture browser into background loading thread. you should be able to actually move around and do stuff while loading a wad with a lot of textures sooner now. the textures will take the same total time to actually load in as before though. ideally i'd replace this code completely, as threading it is just sort of moving the problem.
+- new hotkey added to allow you to test your map with a player start at the mouse cursor (you need to assign it in preferences) 
 - some minor stuff to allow some gzdb plugin cross-compatibility (Sound Propagation, sound environ, automap). this is unstable, use at your own risk. some gzdb features are "faked" to the plugins to trick them into running
 - not really a change, but just in case it's unclear, the GZDoom Editing plugin that can render slopes and 3d floors is included. may need setup in preferences
 - added autogenerated "flats" & "textures" categories if you load in a config that can mix flats/textures
